trying to fix the extra padding when viewing about page on iphones

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -27,6 +27,10 @@
 
 /* Small phones: from 0 to 480px  */
 @media only screen and (max-width: 480px) {
+  .svg-images {
+    padding: 0;
+  }
+
   p.fs-3.mb-0,
   p.fs-3 {
     font-size: 1rem !important;
